approach inicial a migracion Hibernate+JPA.
Actualizacion de dependencias, para Hibernate tenemos 5.6.15 para que sea compatible con Java 21 pero no es la que esta en el apunte del campus --> preguntar esto. datasourceinitializer voló, flyway no se toco, el datasourcetransactionmanager se reemplaza por el jpatransactionmanager y tenemos un entitymanagerfactory() con postgresqldialect. Los modelos pasan a estar anotados como entidades. Estan todas las implementaciones de los daos con Hibernate. Lo que faltaria es limpiar los jdbcdao, sacar spring-jdbc del pom, sacar imports que ya no se usan en webconfig y creo que sacar el show_sql=true